<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CandidateInfo"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NAME"
        android:textSize="15sp" />

    <EditText
        android:textSize="15sp"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:text="@string/SURNAME"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:textSize="15sp"
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:text="@string/TC"
        android:textSize="15sp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:textSize="15sp"
        android:id="@+id/tc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:text="@string/PHONE_NUMBER"
        android:textSize="15sp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:textSize="15sp"
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        />

    <TextView
        android:text="@string/MAIL"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <EditText
        android:textSize="15sp"
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SendAnswer"
        android:text="@string/SEND" />

</LinearLayout>






</android.support.constraint.ConstraintLayout>