<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >



        <EditText
            android:id="@+id/edUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ENTER_EXAM_ID"

            />

        <EditText

            android:id="@+id/edUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ENTER_EXAM_PASSWORD"


            />

        <Button
            android:id="@+id/check"
            android:onClick="check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/START"
            app:layout_constraintBottom_toTopOf="@+id/exit"
            app:layout_constraintTop_toBottomOf="@+id/edUserPassword"/>

        <Button
            android:onClick="exit"
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EXIT"
            app:layout_constraintBottom_toBottomOf="@id/check" />



    </LinearLayout>


</android.support.constraint.ConstraintLayout>